<resources>
  <string name="abc_action_bar_home_description">Navigate home</string>
  <string name="abc_action_bar_up_description">Navigate up</string>
  <string name="abc_action_menu_overflow_description">More options</string>
  <string name="abc_action_mode_done">Done</string>
  <string name="abc_activity_chooser_view_see_all">See all</string>
  <string name="abc_activitychooserview_choose_application">Choose an app</string>
  <string name="abc_capital_off">OFF</string>
  <string name="abc_capital_on">ON</string>
  <string name="abc_menu_alt_shortcut_label">Alt+</string>
  <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
  <string name="abc_menu_delete_shortcut_label">delete</string>
  <string name="abc_menu_enter_shortcut_label">enter</string>
  <string name="abc_menu_function_shortcut_label">Function+</string>
  <string name="abc_menu_meta_shortcut_label">Meta+</string>
  <string name="abc_menu_shift_shortcut_label">Shift+</string>
  <string name="abc_menu_space_shortcut_label">space</string>
  <string name="abc_menu_sym_shortcut_label">Sym+</string>
  <string name="abc_prepend_shortcut_label">Menu+</string>
  <string name="abc_search_hint">Search…</string>
  <string name="abc_searchview_description_clear">Clear query</string>
  <string name="abc_searchview_description_query">Search query</string>
  <string name="abc_searchview_description_search">Search</string>
  <string name="abc_searchview_description_submit">Submit query</string>
  <string name="abc_searchview_description_voice">Voice search</string>
  <string name="abc_shareactionprovider_share_with">Share with</string>
  <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
  <string name="abc_toolbar_collapse_description">Collapse</string>
  <string name="about_device_unlock">&lt;b&gt;&lt;big&gt;About Device Unlock&lt;/big&gt;&lt;/b&gt;&lt;br /&gt;Device unlock enables devices purchased from %1$s to use Non-%1$s SIM cards and services from different international or domestic carriers.&lt;br /&gt;You must have data network or Wi-Fi connection to view latest device unlock information or complete unlock on your device.&lt;br /&gt;To learn more about unlock and associated requirements, visit our &lt;a href=%2$s&gt;unlock support page&lt;/a&gt;.</string>
  <string name="about_item_label">About</string>
  <string name="about_legal_asur">&lt;b&gt;&lt;big&gt;Legal Information&lt;/big&gt;&lt;/b&gt;&lt;br /&gt;&lt;a href=https://www.assurancewireless.com/legal/privacy-policy&gt;Privacy Notice&lt;/a&gt;&lt;br /&gt;&lt;a href=https://www.t-mobile.com/privacy-center&gt;Privacy Center&lt;/a&gt;&lt;br /&gt;&lt;a href=https://www.assurancewireless.com/legal/terms-and-conditions&gt;Terms and Conditions&lt;/a&gt;&lt;br /&gt;&lt;a href=https://www.t-mobile.com/dns&gt;Do Not Sell or Share My Personal Information (DNSS)&lt;/a&gt;</string>
  <string name="about_legal_mpcs">&lt;b&gt;&lt;big&gt;Legal Information&lt;/big&gt;&lt;/b&gt;&lt;br /&gt;&lt;a href=https://www.metrobyt-mobile.com/privacy&gt;Privacy Notice&lt;/a&gt;&lt;br /&gt;&lt;a href=https://www.t-mobile.com/privacy-center&gt;Privacy Center&lt;/a&gt;&lt;br /&gt;&lt;a href=https://www.metrobyt-mobile.com/content/metro/en/desktop/metro/terms-conditions/terms-conditions-service.html&gt;Terms and Conditions&lt;/a&gt;&lt;br /&gt;&lt;a href=https:/www.t-mobile.com/dns&gt;Do Not Sell or Share My Personal Information (DNSS)&lt;/a&gt;</string>
  <string name="about_legal_tmo">&lt;b&gt;&lt;big&gt;Legal Information&lt;/big&gt;&lt;/b&gt;&lt;br /&gt;&lt;a href=https://www.t-mobile.com/privacy-center/privacy-notices/t-mobile-privacy-notice&gt;Privacy Notice&lt;/a&gt;&lt;br /&gt;&lt;a href=https://www.t-mobile.com/privacy-center&gt;Privacy Center&lt;/a&gt;&lt;br /&gt;&lt;a href=https://www.t-mobile.com/responsibility/legal/terms-and-conditions&gt;Terms and Conditions&lt;/a&gt;&lt;br /&gt;&lt;a href=https://www.t-mobile.com/dns&gt;Do Not Sell or Share My Personal Information (DNSS)&lt;/a&gt;</string>
  <string name="about_notices">&lt;a href=#&gt;Notices&lt;/a&gt;</string>
  <string name="about_notices_title">Legal Notices</string>
  <string name="about_report_problem">Report a Problem</string>
  <string name="about_title">About</string>
  <string name="about_unlock_policy_asur">https://www.assurancewireless.com/legal/ctia-regulatory</string>
  <string name="about_unlock_policy_mpcs">https://www.metrobyt-mobile.com/terms-conditions/phone-unlock-policy.html</string>
  <string name="about_unlock_policy_tmo">https://www.t-mobile.com/support/devices/unlock-your-mobile-wireless-device</string>
  <string name="about_version_provider">&lt;big&gt;Version %1$s&lt;br /&gt;Copyright 2023 %2$s&lt;/big&gt;</string>
  <string name="already_unlocked_message">Your phone is able to be used with any international or domestic carrier with compatible network.</string>
  <string name="already_unlocked_positive">GOT IT</string>
  <string name="already_unlocked_title">Your device is already unlocked!</string>
  <string name="androidx_startup">androidx.startup</string>
  <string name="app_name">Unlock</string>
  <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
  <string name="attachment_summary_off">Only download attachments when manually requested</string>
  <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
  <string name="attachment_title">Download incoming attachments</string>
  <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
  <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
  <string name="bullet">		•	</string>
  <string name="button_restart_now">Restart Now</string>
  <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
  <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
  <string name="character_counter_pattern">%1$d/%2$d</string>
  <string name="chip_text">Chip text</string>
  <string name="clear_text_end_icon_content_description">Clear text</string>
  <string name="com.google.firebase.crashlytics.mapping_file_id">51f86a87680f427cb60e22e0be0d05f0</string>
  <string name="common_google_play_services_enable_button">Enable</string>
  <string name="common_google_play_services_enable_text">%1$s won't work unless you enable Google Play services.</string>
  <string name="common_google_play_services_enable_title">Enable Google Play services</string>
  <string name="common_google_play_services_install_button">Install</string>
  <string name="common_google_play_services_install_text">%1$s won't run without Google Play services, which are missing from your device.</string>
  <string name="common_google_play_services_install_title">Get Google Play services</string>
  <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
  <string name="common_google_play_services_notification_ticker">Google Play services error</string>
  <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
  <string name="common_google_play_services_unsupported_text">%1$s won't run without Google Play services, which are not supported by your device.</string>
  <string name="common_google_play_services_update_button">Update</string>
  <string name="common_google_play_services_update_text">%1$s won't run unless you update Google Play services.</string>
  <string name="common_google_play_services_update_title">Update Google Play services</string>
  <string name="common_google_play_services_updating_text">%1$s won't run without Google Play services, which are currently updating.</string>
  <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
  <string name="common_open_on_phone">Open on phone</string>
  <string name="common_signin_button_text">Sign in</string>
  <string name="common_signin_button_text_long">Sign in with Google</string>
  <string name="copy">Copy</string>
  <string name="default_web_client_id">564542607440-dkmp7moc2gr500l5nohcqr83ckhuolmb.apps.googleusercontent.com</string>
  <string name="device_asur_name">Assurance</string>
  <string name="device_asur_unlock_policy">https://www.assurancewireless.com/legal/ctia-regulatory&gt;unlock policy details</string>
  <string name="device_eligibility_reasons">You have not yet met the following requirements to fully unlock your device:</string>
  <string name="device_full_unlock_requirements"><a href="">View your eligibility details</a></string>
  <string name="device_full_unlock_title">What if I want to be fully unlocked?</string>
  <string name="device_full_unlock_try"><a href="">Try Permanent Unlock</a></string>
  <string name="device_mpcs_name">Metro</string>
  <string name="device_mpcs_unlock_policy">https://www.metrobyt-mobile.com/terms-conditions/phone-unlock-policy.html</string>
  <string name="device_status_locked">Status: <b>Locked</b></string>
  <string name="device_status_locked_description">Your device is locked and can only be used with %1$s SIM and network at this time</string>
  <string name="device_status_temporary_unlocked">Status: <b>Temporarily Unlocked</b></string>
  <string name="device_status_temporary_unlocked_description">Your device is temporarily unlocked and can only be used with any international or domestic carrier with a compatible network until the below date.

Expires: <b>%1$s</b>
Note: You can use this up to 5 times per year.</string>
  <string name="device_temporary_eligibility_reasons">You have not yet met the following requirements to temporarily unlock your device:</string>
  <string name="device_temporary_eligibility_reasons_note"><i>Note: Temporarily unlocking your device enables it to be used with any compatible carrier (domestic or international) for 30 days for free. You can use this up to 5 times per year.</i></string>
  <string name="device_temporary_unlock_activate"><a href="">Activate temporary unlock now.</a></string>
  <string name="device_temporary_unlock_eligible">You are eligible to temporarily unlock your device to be used with any compatible carrier (domestic or international) for 30 days for free. You can use this up to 5 times per year.</string>
  <string name="device_temporary_unlock_ineligible">You aren't currently eligible to temporarily unlock your device.</string>
  <string name="device_temporary_unlock_requirements">View your eligibility requirements.</string>
  <string name="device_temporary_unlock_title">Want to temporarily unlock your phone?</string>
  <string name="device_tmo_name">T-Mobile</string>
  <string name="device_tmo_unlock_policy">https://www.t-mobile.com/support/devices/unlock-your-mobile-wireless-device</string>
  <string name="device_unlock_policy">See <a href="https://www.t-mobile.com/support/devices/unlock-your-mobile-wireless-device">unlock policy details.</a></string>
  <string name="dialog_unlock_expired_message">You will need to restart the device right now.</string>
  <string name="dialog_unlock_expired_title">T‑Mobile Temporary Device Unlock has expired</string>
  <string name="error_icon_content_description">Error</string>
  <string name="error_message">Request failed</string>
  <string name="expand_button_title">Advanced</string>
  <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
  <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
  <string name="full_unlocked_message">Your device is now fully unlocked. A restart is required to apply these settings.</string>
  <string name="full_unlocked_restart_later">Restart Later</string>
  <string name="full_unlocked_restart_now">Restart Now</string>
</resources>